[gd_scene load_steps=12 format=3 uid="uid://dspns4d4t7ixh"]

[ext_resource type="Script" path="res://Scenes/gui.gd" id="1_eej5p"]
[ext_resource type="Texture2D" uid="uid://b41p5ynsw1erb" path="res://Textures/Back.png" id="2_24nlt"]
[ext_resource type="Texture2D" uid="uid://ccnu67bxh25mt" path="res://Textures/Previous.png" id="3_jh0dt"]
[ext_resource type="Texture2D" uid="uid://c6gh0d6ax3kea" path="res://Textures/Play.png" id="4_ysirp"]
[ext_resource type="Texture2D" uid="uid://cfl88l3dl2tr6" path="res://Textures/Stop.png" id="5_q1pnj"]
[ext_resource type="Texture2D" uid="uid://0o1wpxyuq5gv" path="res://Textures/Next.png" id="6_n45te"]
[ext_resource type="Texture2D" uid="uid://ble5e2ampvsyg" path="res://Textures/Forward.png" id="7_xjuan"]
[ext_resource type="Texture2D" uid="uid://ydqj8u81sx2c" path="res://Textures/Shuffle.png" id="8_jmehw"]
[ext_resource type="Texture2D" uid="uid://clinmb7oquv8p" path="res://Textures/Loop.png" id="9_oyepu"]
[ext_resource type="Texture2D" uid="uid://msa6nnsu7wcj" path="res://Textures/Loop1.png" id="10_bnngr"]

[sub_resource type="AudioStream" id="AudioStream_0rjxe"]

[node name="GUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_eej5p")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.137255, 0.152941, 0.192157, 1)

[node name="SongPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStream_0rjxe")
volume_db = -30.0

[node name="SongList" type="ItemList" parent="."]
layout_mode = 0
offset_top = 346.0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="History" type="ItemList" parent="."]
layout_mode = 0
offset_left = 937.0
offset_top = 27.0
offset_right = 1701.0
offset_bottom = 322.0

[node name="Controls" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 19.0
offset_top = 97.0
offset_right = 755.0
offset_bottom = 297.0
color = Color(0, 0, 0, 1)

[node name="VolumeSlider" type="HSlider" parent="Controls"]
layout_mode = 0
offset_left = 64.0
offset_top = 177.0
offset_right = 418.0
offset_bottom = 193.0
max_value = 150.0
value = 70.0

[node name="Percent" type="Label" parent="Controls/VolumeSlider"]
layout_mode = 0
offset_left = -59.0
offset_top = -5.0
offset_right = -17.0
offset_bottom = 18.0
text = "70%"

[node name="SongName" type="Label" parent="Controls"]
layout_mode = 0
offset_left = 3.0
offset_top = 3.0
offset_right = 730.0
offset_bottom = 26.0
text = "None playing"

[node name="TimeLeft" type="ProgressBar" parent="Controls"]
layout_mode = 0
offset_left = 4.0
offset_top = 33.0
offset_right = 345.0
offset_bottom = 60.0
max_value = 60.0
show_percentage = false

[node name="Left" type="Label" parent="Controls/TimeLeft"]
layout_direction = 3
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 70.0
offset_bottom = 24.0
text = "0h 0m 0s"

[node name="Length" type="Label" parent="Controls/TimeLeft"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "0h 0m 0s"

[node name="Buttons" type="ColorRect" parent="Controls"]
layout_mode = 0
offset_left = 3.0
offset_top = 68.0
offset_right = 217.0
offset_bottom = 173.0
color = Color(0.356863, 0.356863, 0.356863, 1)

[node name="Container" type="HBoxContainer" parent="Controls/Buttons"]
layout_direction = 2
layout_mode = 0
offset_left = 1.0
offset_top = 64.0
offset_right = 213.0
offset_bottom = 104.0

[node name="Back" type="TextureButton" parent="Controls/Buttons/Container"]
texture_filter = 1
layout_mode = 2
texture_normal = ExtResource("2_24nlt")

[node name="Previous" type="TextureButton" parent="Controls/Buttons/Container"]
texture_filter = 1
layout_mode = 2
texture_normal = ExtResource("3_jh0dt")

[node name="Play" type="TextureButton" parent="Controls/Buttons/Container"]
texture_filter = 1
layout_mode = 2
texture_normal = ExtResource("4_ysirp")

[node name="Stop" type="TextureButton" parent="Controls/Buttons/Container"]
texture_filter = 1
layout_mode = 2
texture_normal = ExtResource("5_q1pnj")

[node name="Next" type="TextureButton" parent="Controls/Buttons/Container"]
texture_filter = 1
layout_mode = 2
texture_normal = ExtResource("6_n45te")

[node name="Forward" type="TextureButton" parent="Controls/Buttons/Container"]
texture_filter = 1
layout_mode = 2
texture_normal = ExtResource("7_xjuan")

[node name="Shuffle" type="CheckButton" parent="Controls/Buttons"]
texture_filter = 1
layout_mode = 0
offset_left = -3.0
offset_top = 14.0
offset_right = 73.0
offset_bottom = 54.0
icon = ExtResource("8_jmehw")

[node name="Loop" type="CheckButton" parent="Controls/Buttons"]
texture_filter = 1
layout_mode = 0
offset_left = 82.0
offset_top = 15.0
offset_right = 158.0
offset_bottom = 55.0
icon = ExtResource("9_oyepu")

[node name="One" type="TextureRect" parent="Controls/Buttons/Loop"]
visible = false
layout_mode = 0
offset_left = 6.0
offset_top = 4.0
offset_right = 46.0
offset_bottom = 44.0
scale = Vector2(0.8, 0.8)
texture = ExtResource("10_bnngr")

[node name="RightButtons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -155.0
offset_top = 5.0
offset_right = -2.0
offset_bottom = 342.0
grow_horizontal = 0
theme_override_constants/separation = 20

[node name="Quit" type="Button" parent="RightButtons"]
layout_mode = 2
text = "Quit"

[node name="Discord" type="CheckButton" parent="RightButtons"]
layout_mode = 2
text = "Discord"
alignment = 1

[node name="RemoveSong" type="CheckButton" parent="RightButtons"]
layout_mode = 2
text = "Remove Song"
alignment = 1

[node name="ClearList" type="Button" parent="RightButtons"]
layout_mode = 2
text = "Clear song list"

[node name="SelectFolder" type="Button" parent="RightButtons"]
layout_mode = 2
text = "Select Folder"

[node name="FolderSelect" type="FileDialog" parent="RightButtons/SelectFolder"]
title = "Load a folder"
position = Vector2i(375, 275)
size = Vector2i(1142, 529)
ok_button_text = "Select Current Folder"
mode_overrides_title = false
file_mode = 2
access = 2
show_hidden_files = true

[node name="SelectSongs" type="Button" parent="RightButtons"]
layout_mode = 2
text = "Select Songs"

[node name="SongSelect" type="FileDialog" parent="RightButtons/SelectSongs"]
title = "Load a folder"
position = Vector2i(375, 275)
size = Vector2i(1142, 529)
ok_button_text = "Open"
mode_overrides_title = false
file_mode = 1
access = 2
show_hidden_files = true

[node name="SavePlaylist" type="Button" parent="RightButtons"]
layout_mode = 2
text = "Save to Playlist"

[node name="PlaylistSave" type="FileDialog" parent="RightButtons/SavePlaylist"]
title = "Save a Playlist"
position = Vector2i(375, 275)
size = Vector2i(1142, 529)
ok_button_text = "Save Playlist"
mode_overrides_title = false
access = 2
filters = PackedStringArray("*.AA-MP")
show_hidden_files = true

[connection signal="finished" from="SongPlayer" to="." method="_on_song_player_finished"]
[connection signal="item_activated" from="SongList" to="." method="_on_song_list_item_activated"]
[connection signal="item_clicked" from="SongList" to="." method="_on_song_list_item_clicked"]
[connection signal="item_activated" from="History" to="." method="_on_history_item_activated"]
[connection signal="gui_input" from="Controls" to="." method="_on_controls_gui_input"]
[connection signal="gui_input" from="Controls/VolumeSlider" to="." method="_on_volume_slider_gui_input"]
[connection signal="pressed" from="Controls/Buttons/Container/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Controls/Buttons/Container/Previous" to="." method="_on_previous_pressed"]
[connection signal="pressed" from="Controls/Buttons/Container/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Controls/Buttons/Container/Stop" to="." method="_on_stop_pressed"]
[connection signal="pressed" from="Controls/Buttons/Container/Next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="Controls/Buttons/Container/Forward" to="." method="_on_forward_pressed"]
[connection signal="toggled" from="Controls/Buttons/Shuffle" to="." method="_on_shuffle_toggled"]
[connection signal="pressed" from="Controls/Buttons/Loop" to="." method="_on_loop_pressed"]
[connection signal="pressed" from="RightButtons/Quit" to="." method="_on_quit_pressed"]
[connection signal="toggled" from="RightButtons/Discord" to="." method="_on_discord_toggled"]
[connection signal="toggled" from="RightButtons/RemoveSong" to="." method="_on_remove_song_toggled"]
[connection signal="pressed" from="RightButtons/ClearList" to="." method="_on_clear_list_pressed"]
[connection signal="pressed" from="RightButtons/SelectFolder" to="." method="_on_select_folder_pressed"]
[connection signal="dir_selected" from="RightButtons/SelectFolder/FolderSelect" to="." method="_on_folder_select_dir_selected"]
[connection signal="pressed" from="RightButtons/SelectSongs" to="." method="_on_select_songs_pressed"]
[connection signal="file_selected" from="RightButtons/SelectSongs/SongSelect" to="." method="_on_song_select_file_selected"]
[connection signal="files_selected" from="RightButtons/SelectSongs/SongSelect" to="." method="_on_song_select_files_selected"]
[connection signal="pressed" from="RightButtons/SavePlaylist" to="." method="_on_save_playlist_pressed"]
[connection signal="file_selected" from="RightButtons/SavePlaylist/PlaylistSave" to="." method="_on_playlist_save_file_selected"]
